cmake_minimum_required(VERSION 3.17)
project(01)

set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
add_executable(01 main.cpp)
add_executable(04chang_liang study01/04chang_liang.cpp)
add_executable(08shu_zi study01/08shu_zi.cpp)
add_executable(09sizeof study01/09sizeof.cpp)
add_executable(11zi_fu study01/11zi_fu.cpp)
add_executable(13zi_fu_chuan study01/13zi_fu_chuan.cpp)
add_executable(14bool study01/14bool.cpp)
add_executable(15cin study01/15cin.cpp)
add_executable(16yun_suan study01/16yun_suan.cpp)
add_executable(19fu_zhi_yun_suan study01/19fu_zhi_yun_suan.cpp)
add_executable(20bi_jiao study01/20bi_jiao.cpp)
add_executable(21luo_ji study01/21luo_ji.cpp)
add_executable(24if study01/24if.cpp)
add_executable(29san_mu study01/29san_mu.cpp)
add_executable(30switch study01/30switch.cpp)
add_executable(31while study01/31while.cpp)
add_executable(33do...while study01/33do...while.cpp)
add_executable(35for study01/35for.cpp)
add_executable(37qian_tao_xun_huan study01/37qian_tao_xun_huan.cpp)
add_executable(39break study01/39break.cpp)
add_executable(40continue study01/40continue.cpp)
add_executable(41goto study01/41goto.cpp)
add_executable(42array study01/42array.cpp)
add_executable(43array_name study01/43array_name.cpp)
add_executable(44array_test1 study01/44array_test1.cpp)
add_executable(45array_test2 study01/45array_test2.cpp)
add_executable(46mao_pao study01/46mao_pao.cpp)
add_executable(47_Two_dimensional_array  "study01/47_Two_dimensional_array .cpp")
add_executable(48Two_dimensional_array_name  "study01/48Two_dimensional_array_name .cpp")
add_executable(50function study01/50function.cpp)
add_executable(52zhi_chuan_di study01/52zhi_chuan_di.cpp)
add_executable(53funcion_class study01/53funcion_class.cpp)
add_executable(54function_sheng_ming study01/54function_sheng_ming.cpp)
add_executable(55swap.cpp study01/55swap.cpp)
#使用header文件要使用下面这个函数添加header目录,所有使用的文件要使用add_executable添加到一起,顺序不用区分
include_directories( "study01/" )
add_executable(55swap.cpp02  study01/55swap02.cpp study01/55swap.cpp)
add_executable(56point study01/56point.cpp)
add_executable(58empty_point_ye_zhi_zhen study01/58empty_point_ye_zhi_zhen.cpp)
add_executable(60const_point study01/60const_point.cpp)
add_executable(61point_array study01/61point_array.cpp)
add_executable(62point_function study01/62point_function.cpp)
add_executable(63point_func_test study01/63point_func_test.cpp)
add_executable(64struct study01/64struct.cpp)
add_executable(65struct_array study01/65struct_array.cpp)
add_executable(66struct_point study01/66struct_point.cpp)
add_executable(67struct_qian_tao study01/67struct_qian_tao.cpp)
add_executable(68struct_function study01/68struct_function.cpp)
add_executable(69const_struct study01/69const_struct.cpp)
add_executable(70struct_test1 study01/70struct_test1.cpp)
add_executable(71struct_test2 study01/71struct_test2.cpp)
add_executable(72union study01/72union.cpp)
add_executable(73enum study01/73enum.cpp)
add_executable(74vector study01/74vector.cpp)
add_executable(75array_template study01/75array_template.cpp)

add_executable(00bubble Sort/00bubble.cpp)
add_executable(00select Sort/00select.cpp)
add_executable(00insert Sort/00insert.cpp)
add_executable(00quick Sort/00quick.cpp)
add_executable(00merge Sort/00merge.cpp)
add_executable(00shell Sort/00shell.cpp)
add_executable(test00 test00.cpp)


add_executable(test Sort/test.cpp)