cmake_minimum_required(VERSION 3.21)
project(08)

set(CMAKE_CXX_STANDARD 20)

add_executable(01 01.cpp)
add_executable(02 02.cpp)
add_executable(03 03.cpp)
add_executable(04 04.cpp)
add_executable(05 05.cpp)
add_executable(06 06.cpp)
add_executable(07 07.cpp)
add_executable(08 08.cpp)
add_executable(09 09.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(12 12.cpp)
add_executable(13 13.cpp)
add_executable(14_vector 14_vector.cpp)