cmake_minimum_required(VERSION 3.21)
project(08)

set(CMAKE_CXX_STANDARD 20)

add_executable(01 01.cpp)
add_executable(02 02.cpp)
add_executable(03 03.cpp)
add_executable(04 04.cpp)
add_executable(05 05.cpp)
add_executable(06 06.cpp)
add_executable(07 07.cpp)
add_executable(08 08.cpp)
add_executable(09 09.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(12 12.cpp)
add_executable(13 13.cpp)
add_executable(14_string 14_string.cpp)
add_executable(15_vector 15_vector.cpp)
add_executable(16_vector 16_vector.cpp)
add_executable(17_vector 17_vector.cpp)
add_executable(18_deque 18_deque.cpp)
add_executable(19_algorithm_vector_deque_sort "19_algorithm_vector_deque_sort.cpp")
add_executable(20_stack 20_stack.cpp)
add_executable(21_queue 21_queue.cpp)
add_executable(22_list 22_list.cpp)
add_executable(23_set 23_set.cpp)
add_executable(24_pair 24_pair.cpp)
add_executable(25_map 25_map.cpp)
add_executable(26_functional 26_functional.cpp)
add_executable(27_algorithm 27_algorithm.cpp)
add_executable(28_numeric 28_numeric.cpp)